fix(spreadsheet MFB): Fixed a small layout issue + load lottie explicitly (#692)

--- a/express/blocks/floating-button/floating-button.css
+++ b/express/blocks/floating-button/floating-button.css
@@ -213,7 +213,7 @@ main .floating-button-wrapper.multifunction .floating-button .toggle-button .lot
   transition: opacity 0.2s;
 }
 
-main .floating-button-wrapper.multifunction.floating-button--above-the-fold:not(.floating-button--scrolled) .button {
+main .floating-button-wrapper.multifunction .button {
   padding-left: 48px;
 }
 
